# LifeStarway

./: .gitignore  README.md  docker-compose.yml  render.yaml  初赛作品.md
backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  lifestarway.db  pyproject.toml  requirements.txt  run_test.py  screenshot.py  test_extended.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/ai/: __init__.py  llm_client.py  mock_data.py
backend/app/ai/parsers/: __init__.py  plan_parser.py
backend/app/ai/prompts/: diagnosis.py  planning.py  resume.py  whatif.py
backend/app/api/: __init__.py  auth.py  diagnosis.py  plan.py  profile.py  starmap.py  user.py  whatif.py
backend/app/models/: __init__.py  diagnosis.py  plan.py  profile.py  simulation.py  user.py
backend/app/schemas/: __init__.py  auth.py  diagnosis.py  plan.py  profile.py  simulation.py  starmap.py
backend/app/services/: __init__.py  auth_service.py  plan_service.py  profile_service.py  scraper_service.py  starmap_service.py  whatif_service.py
backend/app/utils/: cache.py  deps.py
backend/test/: test_report_20260715.md  test_report_20260716.md  test_report_20260716_p5.md  test_report_20260716_p6.md  test_report_20260716_p7.md
docs/: Redis安装指南.md  创意展示页.html  技术方案.md  报名.md  项目深度分析报告.md
frontend/: .env.production  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
test/: README.md  run_all_tests.py
test/backend/: conftest.py  pytest.ini  test_auth.py  test_business.py  test_infrastructure.py  test_integration.py  (+2 more)
(+14 files in other folders)
