[project]
name = "lifestarway-backend"
version = "1.0.0"
description = "人生星途 LifeStarway - 数据沉淀迭代式AI全生命周期职业生涯规划系统后端"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "asyncpg==0.30.0",
    "bcrypt>=5.0.0",
    "email-validator==2.3.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "openai==1.45.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.30.6",
]
